# pyci-learn

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  math_utils.py
