[project]
name = "inference"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "bmi-topography~=0.9.0",
    "einops~=0.8.0",
    "faiss-cpu~=1.9.0",
    "filterpy~=1.4.5",
    "gpsd-py3~=0.3.0",
    "meta-common==0.0.22",
    "onnxruntime==1.23.0 ; sys_platform == 'darwin'",
    "onnxruntime-gpu==1.23.0 ; sys_platform != 'darwin'",
    "opencv-python~=4.11.0.86",
    "opentelemetry-sdk>=1.35.0",
    "pygobject==3.42.1",
    "pymavlink>=2.4.49",
    "pynng~=0.8.1",
    "pyproj~=3.7.0",
    "pyserial>=3.5",
    "rasterio~=1.3.11",
    "scikit-learn~=1.7.0",
    "scipy~=1.14.0",
    "tqdm~=4.66.5",
    "transformers~=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "tabulate>=0.9.0",
]
test = [
    "ruff~=0.12.0",
    "pygobject-stubs~=2.13.0",
    "opencv-stubs~=0.0.11",
    "types-colorama~=0.4.15.20240311",
    "types-pyyaml~=6.0.12.20250516",
    "mypy~=1.16.1",
    "pytest>=8.4.1",
    "types-pyserial>=3.5.0.20250919",
    "pandas-stubs>=2.3.2.250926",
    "scipy-stubs>=1.15.3.0",
]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.mypy.overrides]]
module = [
    "affine",
    "bmi_topography",
    "filterpy.*",
    "gpsd.*",
    "onnxruntime.*",
    "rasterio.*",
    "pymavlink.*",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
# TODO: restore checks in following files once errors are fixed
module = [
    "app.utils.checkers",
    "app.localizer",
    "app.matcher",
]
ignore_errors = true

[[tool.uv.index]]
name = "jetson-ai-lab"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true

[tool.uv.sources]
meta-common = { git = "ssh://git@github.com/evisiondynamics/meta-common", tag = "0.0.22" }
onnxruntime-gpu = { index = "jetson-ai-lab", marker = "platform_machine == 'aarch64'" }
